--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,6 +229,38 @@ html{
     margin-top: -3px;
 }
 
+/* Places */
+.places-list{
+    margin: 32px -8px 0px;
+
+}
+.place-item{
+    float: left;
+    width: 33.3333333%;
+    padding: 0 8px;
+}
+.place-img{
+    width: 100%;
+}
+.place-img:hover{
+    opacity: 0.6;
+}
+.place-body{
+
+}
+.place-heading{
+
+}
+.place-time{
+
+}
+.place-desc{
+
+}
+.place-buy-btn{
+
+}
+
 #footer{
 
 }
