--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ html{
 3. Từ tổng quan đến chi tiết
 */
 
-#clear{
+.clear{
     clear: both;
 }
 
@@ -232,8 +232,9 @@ html{
 /* Places */
 .places-list{
     margin: 32px -8px 0px;
-
+    padding-bottom: 48px;
 }
+
 .place-item{
     float: left;
     width: 33.3333333%;
@@ -241,26 +242,41 @@ html{
 }
 .place-img{
     width: 100%;
+    display: block;
 }
 .place-img:hover{
     opacity: 0.6;
 }
 .place-body{
-
+    padding: 16px;
+    font-size: 15px;
+    background-color: #fff;
 }
 .place-heading{
-
+    font-size: 15px;
+    font-weight: 600;
 }
 .place-time{
+    margin-top: 15px;
+    color: #757575;
 
 }
 .place-desc{
-
+    margin-top: 15px;
+    line-height: 1.4;
 }
 .place-buy-btn{
-
+    color: #fff;
+    background-color: #000;
+    text-decoration: none;
+    padding: 11px 16px;
+    display: inline-block;
+    margin-top: 15px;
 }
-
+.place-buy-btn:hover{
+    color: #000;
+    background-color: #ccc;
+}
 #footer{
 
 }
