--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,9 +290,9 @@ html{
     background: rgb(0, 0, 0, 0.4);
     align-items: center;
     justify-content: center;
-    display: flex;
+    display: none;
 }
-.modal-open{
+.modal.open{
     display: flex;
 }
 .modal-container {
@@ -301,6 +301,7 @@ html{
     max-width: calc(100%-32px);
     min-height: 200px;
     position: relative;
+    animation: modalFadeIn ease .5s;
 }
 .modal-header {
     background: #009688;
@@ -360,4 +361,15 @@ html{
 }
 .modal-footer a {
     color:#2196F3 ;
+}
+
+@keyframes modalFadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-140px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
